kubernetes/qbittorrent/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  replicas: 0
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: k8s-wk-0
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:4.6.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: bittorrent-tcp
              containerPort: 10096
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 10096
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: media
              mountPath: /media
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 240
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          nfs:
            server: 192.168.1.100
            path: /mnt/epool/media
        - name: qbittorrent-config-template
          configMap:
            name: qbittorrent-config-template
