kubernetes/qbittorrent/base/service-torrent-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrent
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: bittorrent-tcp
      protocol: TCP
      port: 10096
      targetPort: bittorrent-tcp
      nodePort: 32096
    - name: bittorrent-udp
      protocol: UDP
      port: 10096
      targetPort: bittorrent-udp
      nodePort: 32196
