kubernetes/qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: bittorrent-tcp
      protocol: TCP
      port: 6881
      targetPort: bittorrent-tcp
    - name: bittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: bittorrent-udp
