kubernetes/qbittorrent/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: nginx
  rules:
    - host: qbittorrent.example.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
